# ocaml-diffutils

./: .ocamlformat  LICENSE  README.md  diffinocaml.ml  diffutils.opam  dune-project
lib/: diffutils.ml  diffutils.mli  dune
test/: dune  tests.md
